@@ -1,52 +1,48 @@
 package com.lovelysystems.facet.distinct;
 
 import org.elasticsearch.common.CacheRecycler;
-import org.elasticsearch.common.io.stream.StreamInput;
-import org.elasticsearch.common.io.stream.StreamOutput;
 import org.elasticsearch.common.trove.ExtTLongObjectHashMap;
 import org.elasticsearch.common.xcontent.XContentBuilder;
 import org.elasticsearch.common.xcontent.XContentBuilderString;
 import org.elasticsearch.search.facet.Facet;
-import org.elasticsearch.search.facet.InternalFacet;
 import org.elasticsearch.search.facet.datehistogram.InternalDateHistogramFacet;
 
 import java.io.IOException;
-import java.util.ArrayList;
-import java.util.Arrays;
-import java.util.Collection;
-import java.util.Collections;
-import java.util.Comparator;
-import java.util.HashSet;
-import java.util.Iterator;
-import java.util.List;
-import java.util.Set;
+import java.util.*;
 
 /**
  */
-public class InternalDistinctDateHistogramFacet extends InternalDateHistogramFacet {
-
-    private static final String STREAM_TYPE = "DistinctDateHistogram";
+public abstract class InternalDistinctDateHistogramFacet extends InternalDateHistogramFacet {
 
     public static final String TYPE = "distinct_date_histogram";
 
+    protected String name;
+
+    protected ComparatorType comparatorType;
+
+    ExtTLongObjectHashMap<InternalDistinctDateHistogramFacet.DistinctEntry> tEntries;
+    boolean cachedEntries;
+    Collection<DistinctEntry> entries = null;
+
+    public InternalDistinctDateHistogramFacet() {
+    }
+
     public static void registerStreams() {
-        InternalFacet.Streams.registerStream(STREAM, STREAM_TYPE);
+        LongInternalDistinctDateHistogramFacet.registerStreams();
+        StringInternalDistinctDateHistogramFacet.registerStreams();
     }
 
-    static InternalFacet.Stream STREAM = new InternalFacet.Stream() {
-        @Override public Facet readFacet(String type, StreamInput in) throws IOException {
-            return readHistogramFacet(in);
-        }
-    };
-
-    @Override public String streamType() {
-        return STREAM_TYPE;
+    public InternalDistinctDateHistogramFacet(String name, ComparatorType comparatorType, ExtTLongObjectHashMap<InternalDistinctDateHistogramFacet.DistinctEntry> entries, boolean cachedEntries) {
+        this.name = name;
+        this.comparatorType = comparatorType;
+        this.tEntries = entries;
+        this.cachedEntries = cachedEntries;
+        this.entries = entries.valueCollection();
     }
-
 
     /**
      * A histogram entry representing a single entry within the result of a histogram facet.
-     * 
+     *
      * It holds a set of distinct values and the time.
      */
     public static class DistinctEntry implements Entry {
@@ -128,24 +124,6 @@ public class InternalDistinctDateHistogramFacet extends InternalDateHistogramFac
         }
     }
 
-    protected String name;
-
-    protected ComparatorType comparatorType;
-
-    ExtTLongObjectHashMap<InternalDistinctDateHistogramFacet.DistinctEntry> tEntries;
-    boolean cachedEntries;
-    Collection<DistinctEntry> entries = null;
-
-    private InternalDistinctDateHistogramFacet() {
-    }
-
-    public InternalDistinctDateHistogramFacet(String name, ComparatorType comparatorType, ExtTLongObjectHashMap<InternalDistinctDateHistogramFacet.DistinctEntry> entries, boolean cachedEntries) {
-        this.name = name;
-        this.comparatorType = comparatorType;
-        this.tEntries = entries;
-        this.cachedEntries = cachedEntries;
-        this.entries = entries.valueCollection();
-    }
 
     @Override public String name() {
         return this.name;
@@ -186,6 +164,15 @@ public class InternalDistinctDateHistogramFacet extends InternalDateHistogramFac
         }
     }
 
+
+    static final class Fields {
+        static final XContentBuilderString _TYPE = new XContentBuilderString("_type");
+        static final XContentBuilderString ENTRIES = new XContentBuilderString("entries");
+        static final XContentBuilderString TIME = new XContentBuilderString("time");
+        static final XContentBuilderString COUNT = new XContentBuilderString("count");
+        static final XContentBuilderString TOTAL_COUNT = new XContentBuilderString("count");
+    }
+
     @Override public Facet reduce(String name, List<Facet> facets) {
         if (facets.size() == 1) {
             // we need to sort it
@@ -200,11 +187,12 @@ public class InternalDistinctDateHistogramFacet extends InternalDateHistogramFac
         for (Facet facet : facets) {
             InternalDistinctDateHistogramFacet histoFacet = (InternalDistinctDateHistogramFacet) facet;
             for (DistinctEntry fullEntry : histoFacet.entries) {
-                DistinctEntry current = map.get(fullEntry.time);
+                DistinctEntry current = map.get(fullEntry.getTime());
                 if (current != null) {
-                    current.values.addAll(fullEntry.values);
+                    current.getValue().addAll(fullEntry.getValue());
+
                 } else {
-                    map.put(fullEntry.time, fullEntry);
+                    map.put(fullEntry.getTime(), fullEntry);
                 }
             }
             histoFacet.releaseCache();
@@ -225,20 +213,14 @@ public class InternalDistinctDateHistogramFacet extends InternalDateHistogramFac
         CacheRecycler.pushLongObjectMap(map);
 
         // just initialize it as already ordered facet
-        InternalDistinctDateHistogramFacet ret = new InternalDistinctDateHistogramFacet();
+        InternalDistinctDateHistogramFacet ret = newFacet();
         ret.name = name;
         ret.comparatorType = comparatorType;
         ret.entries = ordered;
         return ret;
     }
 
-    static final class Fields {
-        static final XContentBuilderString _TYPE = new XContentBuilderString("_type");
-        static final XContentBuilderString ENTRIES = new XContentBuilderString("entries");
-        static final XContentBuilderString TIME = new XContentBuilderString("time");
-        static final XContentBuilderString COUNT = new XContentBuilderString("count");
-        static final XContentBuilderString TOTAL_COUNT = new XContentBuilderString("count");
-    }
+    protected abstract InternalDistinctDateHistogramFacet newFacet();
 
     /**
      * Builds the final JSON result.
@@ -270,48 +252,5 @@ public class InternalDistinctDateHistogramFacet extends InternalDateHistogramFac
         return builder;
     }
 
-    public static InternalDistinctDateHistogramFacet readHistogramFacet(StreamInput in) throws IOException {
-        InternalDistinctDateHistogramFacet facet = new InternalDistinctDateHistogramFacet();
-        facet.readFrom(in);
-        return facet;
-    }
 
-    /**
-     * The reader for the internal transport protocol.
-     */
-    @Override public void readFrom(StreamInput in) throws IOException {
-        name = in.readUTF();
-        comparatorType = ComparatorType.fromId(in.readByte());
-
-        cachedEntries = false;
-        int size = in.readVInt();
-        entries = new ArrayList<DistinctEntry>(size);
-        for (int i = 0; i < size; i++) {
-            long time = in.readLong();
-            int nameSize = in.readVInt();
-            Set<Object> names = new HashSet<Object>(nameSize);
-            for (int j = 0; j < nameSize; j++) {
-                names.add(in.readUTF());
-            }
-            entries.add(new DistinctEntry(time, names));
-        }
-    }
-
-    /**
-     * The writer for the internal transport protocol.
-     */
-    @Override public void writeTo(StreamOutput out) throws IOException {
-        out.writeUTF(name);
-        out.writeByte(comparatorType.id());
-        out.writeVInt(entries.size());
-        for (DistinctEntry entry : entries) {
-            out.writeLong(entry.time);
-            out.writeVInt(entry.getValue().size());
-
-            for (Object name : entry.getValue()) {
-                out.writeUTF((String) name);
-            }
-        }
-        releaseCache();
-    }
 }
